first cut of home page alignment

--- a/index.html
+++ b/index.html
@@ -3,3 +3,13 @@ layout: default
 title: Home
 ---
 
+<div class="container-fluid">
+	<div class="row">
+		<div class="col-md-6">
+			{% include allposts.html %}
+		</div>
+		<div class="col-md-6">
+			{% include about.html %}
+		</div>
+	</div>
+</div>
