--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ title: Home
 <div class="container-fluid">
 	<div class="row">
 		<div class="col-md-8">
-			<h2>Recent Blog Posts</h2>
+			<h2>Recent Posts</h2>
 
 			{% if site.posts %}
 			    {% for post in site.posts offset:0 limit:10 %}
