update post layout and some other fixes

--- a/tech/index.html
+++ b/tech/index.html
@@ -33,7 +33,7 @@ title: Keep Walking!
             <ul class="pagination">
                 {% if paginator.previous_page %}
                     {% if paginator.previous_page == 1 %}
-                        <li><a href="/blog/">&laquo;</a></li>
+                        <li><a href="/tech/index.html">&laquo;</a></li>
                     {% else %}
                         <li><a href="{{ paginator.previous_page_path }}">&laquo;</a></li>
                     {% endif %}
