update 404 and add sitemap

--- a/404.html
+++ b/404.html
@@ -1,4 +1,8 @@
 ---
 layout: default
 ---
-Sorry, I am unable to find the page you are looking for.
+
+The page you requested is not available. If might have never been authored, or may
+have been removed, or is still in the works.
+
+A list of all pages is available via the [Sitemap](/sitemap.html).
