--- a/sitemap.html
+++ b/sitemap.html
@@ -1,11 +1,15 @@
 ---
 layout: default
-title: Archive - Keep Walking!
+title: Sitemap
 ---
 
-<h1>Sitemap</h1>
-
 <div class="archive post">
+    <div class="row">
+        <div class="col-md-2"></div>
+        <div class="col">
+            <h2>Sitemap</h2>
+        </div>
+    </div>
 {% for post in site.posts offset: 0 %}
     <div class="row">
         <div class='col-md-2 text-muted text-right date-col'>   
