--- a/poetry/archive.html
+++ b/poetry/archive.html
@@ -3,9 +3,13 @@ layout: default
 title: Archive - Poet Inside!
 ---
 
-<h2>Archive - Poet Inside!</h2>
-
 <div class="archive post">
+    <div class="row">
+        <div class="col-md-2"></div>
+        <div class="col">
+            <h2>Poet Inside</h2>
+        </div>
+    </div>
 {% for post in site.posts offset: 0 %}
     {% if post.category == 'poetry' %}
         <div class="row">
