--- a/blogs.html
+++ b/blogs.html
@@ -1,8 +1,26 @@
 ---
-layout: default
+layout: smaller-page
 title: Blogs
 ---
 
-<div class='smaller-reading-pane'>
-    {% include blogs.html %}
-</div>
+<h1><a href='/tech/index.html'>Keep Walking!</a></h1>
+
+As a river meanders between various lands and creates a course, learning many a things; this 
+blog is a reflection of my musings during my ride in the roller-coaster called <b>code</b>.
+<b>Keep Walking</b> is a collection of all my learnings I have gained as a software developer
+over the many years. It also is a repo of all the code snippets, open-source frameworks that I
+have created over time.
+
+<br><br>
+<h1><a href='/poetry/index.html'>Poet Inside</a></h1>
+
+The music of language, intricate rhyme schemes, elegant phrases, vivid images - the art of 
+poetry is enough to inspire many to write it. Poetry is the practice of creating artworks using 
+language. What could be a better way than discovering the music inside yourself than Poetry? 
+Words are the soul of any rythm, any sort of music.
+
+<br><br>
+<h1><a href='http://goodtoknowit.blogspot.com'>Thought Process - Good to know It</a></h1>
+
+A blog about invoking the though process by looking at various puzzles - started by a dear friend, but
+more or less dead now.
